--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -9,9 +9,33 @@
 
 
 
+.homeSection1 {
+
+    font-family: 'Tilt Neon', cursive;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 338px;
+    color: white;
+    margin-bottom: 278px;
+  }
+
+  .homeSection1::before {
+    content: "";
+    position: absolute;
+    background: url('../../images/bgmain2.jpg') center center/cover;
+    height: 700px;
+    margin-top: 70px;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    z-index: -1;
+    /* opacity:0.9 ; */
+  }
 .homeSection1{
     display: flex;
-    background-color: rgb(254,249,243);
+    /* background-color: rgb(254,249,243); */
     padding: 20px;
 }
 
