--- a/frontend/src/pages/Leaderboard/Leaderboard.css
+++ b/frontend/src/pages/Leaderboard/Leaderboard.css
@@ -15,7 +15,7 @@
 .ldList {
     list-style-type: none;
     padding: 20px;
-    border-radius: 20px;
+    /* border-radius: 20px; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -34,8 +34,6 @@
     gap: 10px;
     background-color: antiquewhite;
   }
-
-  
 
   .ldItem {
     width: 100%;
@@ -91,7 +89,7 @@
   .top3Div{
     width: 100%;
     display: flex;
-    /* background-color: antiquewhite; */
+    gap: 5px;
     padding: 10px;
     border-radius: 10px;
     align-self: flex-end;
@@ -104,38 +102,54 @@
     align-items: center;
     width: 80%;
     align-self: flex-end; 
-    padding: 20px;
+    gap: 5px;
   }
 
   .first{
-    width: 60%;
-    height: 200px;
+    width: 100%;
+    height: 400px;
     background-color: #ffd700;
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
-    font-size: 80px;
+    font-size: 40px;
   }
 
   .second{
-    width: 60%;
-    height: 160px;
+    width: 100%;
+    height: 300px;
     background-color: rgb(192, 192, 192);
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
-    font-size: 80px;
+    font-size: 40px;
   }
 
   .third{
-    width: 60%;
-    height: 120px;
+    width: 100%;
+    height: 200px;
     background-color: rgb(205,127,50);
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
-    font-size: 80px;
+    font-size: 40px;
+
+  }
+
+  .points{
+    font-weight: 700;
+  }
+
+  /* leaderboard image */
+  .imgDiv{
+    width: 70%;
+    object-fit: cover;
+  }
+
+  .ldImage{
+    max-width: 100%;
+    border-radius: 50%;
   }
