changes in homoepage

--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -7,43 +7,47 @@
     margin-top: 60px;
 }
 
-.animImg1{
-    height: 100px;
-    
+#background-video {
     position: absolute;
-    animation: moveX 1.5s linear infinite alternate; 
-}
-  @keyframes moveX {
-    0% {
-      transform: translateX(0);
-    }
-    100% {
-      transform: translateX(20%); /* Adjust the distance you want the image to move */
-    }
-  } 
-
-
-  .animImg2{
-    height: 100px;
-    top: 500px;
-    left: 800px;
-    position: absolute;
-    animation: moveY 1.5s linear infinite alternate; 
-}
-  @keyframes moveY {
-    0% {
-      transform: translateY(0);
-    }
-    100% {
-      transform: translateY(20%); /* Adjust the distance you want the image to move */
-    }
-  } 
-
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+  }
  
+  .allkids{
+    display: flex;
+  }
 .homeSection1{
     display: flex;
-    background-color: rgb(254,249,243);
+    /* background-color: rgb(254,249,243); */
     padding: 20px;
+}
+
+.homeSection1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 338px;
+    /* margin-top: 200px; */
+    padding: 160px 100px;
+    color: white;
+}
+
+.homeSection1::before {
+    margin-top: 100px;
+    content: "";
+    position: absolute;
+    background: url('../../images/16455786_05sa_ldnn_2106179.jpg') center center/cover;
+    height: 640px;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    z-index: -1;
+    /* opacity:0.9 ; */
 }
 
 .homeSection2{
@@ -69,10 +73,18 @@
     align-items: center;
     flex: 6.5;
 }
-
+.allkids{
+    position: absolute;
+    right: 0px;
+    top: 400px;
+}
 .homeimg{
-    border-radius: 20px;
-    max-width: 100%;
+    /* border-radius: 20px; */
+    /* max-width: 100%; */
+    height: 340px;
+    /* height: 340px; */
+    margin: 0;
+    padding: 0;
 }
 
 .homeimg3{
@@ -109,7 +121,7 @@
 }
 
 .explore{
-    background-color: rgb(126,181,60);
+    background-color: rgb(255, 166, 0);
     border: 0px;
     padding: 20px;
     font-size: larger;
