--- a/frontend/src/components/Navbar/Navbar2.css
+++ b/frontend/src/components/Navbar/Navbar2.css
@@ -3,7 +3,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap');
 
 .navbar2 {
-    background-color: rgba(255, 255, 255,0.4);
+    /* background-color: rgb(196, 35, 151); */
+    /* background-color: rgb(94, 217, 224); */
+    background-color:rgb(246, 236, 224);
     letter-spacing: 1px;
     color: rgba(50,126,94,255);
     align-items: center;
@@ -26,17 +28,20 @@
 
 nav a{
     text-decoration: none;
-    color: black;
+    color: white;
 }
 
 nav ul li{
+    background-color: rgba(34,72,126,255);
+    background-color: orange;
+    color: white;
         list-style: none;
-        padding: 0px 14px;
+        padding: 6px 14px;
         margin-right: 30px;
         font-size: 115%;
         font-weight: 400;
         display: inline-block;
-        border-radius: 1rem;
+        border-radius: .6rem;
 }
 
 nav ul{
@@ -72,4 +77,18 @@ nav ul{
 
 .logout-btn{
     color: black;
+}
+
+@-webkit-keyframes shake{
+    from{
+        -webkit-transform:rotate(4deg);
+    }
+    to{
+        -webkit-transform: rotate(-4deg);
+        -webkit-transform-origin:center center ;
+    }
+}
+
+nav ul li:hover{
+    -webkit-animation: shake .2s ease-in-out .1s infinite alternate;
 }
