--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -22,17 +22,10 @@
   }
 .homeSection1{
     display: flex;
-    /* background-color: rgb(254,249,243); */
-    padding: 20px;
-}
-
-.homeSection1{
-    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 338px;
-    /* margin-top: 200px; */
     padding: 160px 100px;
     color: white;
 }
@@ -162,12 +155,13 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    height: 100%;
 }
 
 .cdWrapper2{
     display: flex;
     gap: 30px;
-    width: 70%;
+    width: 95%;
 }
 
 .cdWrapper3{
