--- a/frontend/src/pages/Videospg/Videos.css
+++ b/frontend/src/pages/Videospg/Videos.css
@@ -1,3 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@200&family=Roboto&family=Titillium+Web:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dongle&family=Fredoka:wght@600&family=Poppins:wght@500&family=Signika+Negative:wght@500;600&display=swap');
+
+#md-title{
+  margin: 25px;
+  color: rgb(22, 60, 65);
+}
+
+
+
+#vid-pg-cont{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 430px;
+  /* margin-top: 200px; */
+  padding: 160px 20px;
+  color: white;
+}
+
+#vid-pg-cont::before {
+  margin-top:71px;
+  content: "";
+  position: fixed;
+  background: url('../../images/32442923_7895078.jpg') center center/cover;
+  height: 720px;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  z-index: -1;
+  /* opacity:0.9 ; */
+}
 
 
 .videoWrapper {
@@ -7,32 +40,46 @@
   justify-content: center;
   align-items: center;
 }
-
+.videoWrapper h3{
+  margin: 10px;
+  color: rgb(196, 35, 151);
+}
 .videoImg {
   width: 100%;
+  /* height: 120%; */
+  height: 230px;
   border-radius: 10px;
+  
+  border: 2px solid whitesmoke;
 }
 
 .video-card {
   cursor: pointer;
-  width: 30vw;
-  border: 1px solid #ccc;
+  width: 28vw;
+  /* border: 1px solid #ccc; */
   box-shadow: 0px 0px 5px rgb(160, 160, 160);
   border-radius: 10px;
   padding: 10px;
   text-align: center;
   position: relative; 
+  background-color: antiquewhite;
+  font-family: 'Fredoka';
+  font-size: 20px;
+  border: 3px solid rgb(145, 4, 106);
 }
 
 .video-card video {
+  border: 3px solid rgb(145, 4, 106);
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  
   object-fit: cover;
   border-radius: 10px;
   display: none;
+
 }
 
 .video-card:hover video {
