--- a/frontend/src/components/Blogcard/Blogcard.css
+++ b/frontend/src/components/Blogcard/Blogcard.css
@@ -12,7 +12,8 @@
 
 .cdimg{
     border-top-left-radius: 30px;
-    max-width: 100%;
+    height: 280px;
+    /* max-width: 100%; */
 }
 
 .cd2:hover{
