--- a/frontend/src/components/Cards/Blogcard.css
+++ b/frontend/src/components/Cards/Blogcard.css
@@ -2,7 +2,8 @@
     border-end-end-radius: 30px;
     border-top-left-radius: 30px;
     background-color: antiquewhite;
-    width: 100%;
+    width: 460px;
+    height: 500px;
 }
 
 .heading{
@@ -12,11 +13,13 @@
 
 .cdimg{
     border-top-left-radius: 30px;
-    max-width: 100%;
+    height: 280px;
+    width: 420px;
+    /* max-width: 100%; */
 }
 
 .cd2:hover{
     border-end-end-radius: 30px;
     border-top-left-radius: 30px;
-    background-color: rgb(252,239,233);
+    background-color: rgb(226, 180, 120);
 }
