--- a/frontend/src/components/Cards/Experts.css
+++ b/frontend/src/components/Cards/Experts.css
@@ -1,14 +1,15 @@
 .cd7image{
     border-radius: 50px;
     max-width: 100%;
+    height: 400px;
 }
 
 .card7 {
     width: 100%;
-    height: 254px;
+    height: 400px;
     transition: all 0.4s;
     border-radius: 10px;
-    font-size: 30px;
+    font-size: 40px;
     font-weight: 900;
     color: white;
   }
@@ -18,9 +19,31 @@
     cursor: pointer;
     background: rgb(243,103,75);
   }
+
+  .cd7first{
+    position: absolute;
+    bottom: 0%;
+    left: 0px;
+    background-color: rgb(250,244,243);
+    color: black;
+    padding: 5px;
+    border-top-right-radius: 20px;
+    border-end-start-radius: 30px;
+    font-size: 25px;
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .cd7firstText{
+    color: rgb(10,32,57);
+    font-weight: 200;
+  }
   
   .first-content {
-    height: 100%;
+    height: 400px;
     width: 100%;
     transition: all 0.5s;
     display: flex;
@@ -29,6 +52,7 @@
     opacity: 1;
     border-radius: 15px;
     object-fit: cover;
+    position: relative;
   }
   
   .card7:hover .first-content {
@@ -37,13 +61,13 @@
   }
   
   .second-content {
-    height: 0%;
+    height: 400px;
     width: 100%;
     opacity: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 15px;
+    border-radius: 30px;
     transition: all 0.6s;
     font-size: 0px;
   }
