--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -268,6 +268,7 @@ a{
     /* color: orange; */
     color: white;
     background-color: #ffa600;
+    cursor: pointer;
     font-size: 16px;
     border: 0.3em solid orange;
     border-radius: 0.5em;
