--- a/frontend/src/components/Cards/Eventcard.css
+++ b/frontend/src/components/Cards/Eventcard.css
@@ -19,7 +19,12 @@
     color: rgb(242,76,46);
 }
 
+.cd3imgDiv{
+    object-fit: cover;
+}
 .cd3img{
+    width: 300px;
+    height: 100%;
     border-radius: 20px;
 }
 
