--- a/frontend/src/pages/Videospg/Videos.css
+++ b/frontend/src/pages/Videospg/Videos.css
@@ -178,7 +178,33 @@
   }
 }
 
-iframe {
+.iframe {
   width: 100%;
   height: 90%;
+}
+
+
+.compltetd-video{
+  color: black;
+  width: 100%;
+  height: 100%;
+  
+}
+
+.compltetd-video-content{
+  width: 100%;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.vd-btn{
+  padding: 10px;
+  width: 10rem;
+  border: 0px;
+  background-color: rgb(0, 140, 255);
+  color: white;
+  border-radius: 10px;
 }
