--- a/frontend/src/components/Navbar/Navbar2.css
+++ b/frontend/src/components/Navbar/Navbar2.css
@@ -35,6 +35,11 @@
     z-index: 100;
 }
 
+.navbar2 img{
+    height: 144px;
+    display: none;
+    width: 100%;
+}
 .navbarimg{
     opacity: 0.8;
     margin-top: -160px;
