--- a/frontend/src/components/Cards/Homecard.css
+++ b/frontend/src/components/Cards/Homecard.css
@@ -11,12 +11,14 @@
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
     position: relative;
+    cursor: pointer;
     font-size: 20px;
     background-color: white;
 }
 
 .cd6Container2{
     width: 100%;
+    cursor: pointer;
     height: max-content;
     transition: transform 1s linear;
     border-top: 5px solid rgb(99,145,164);
@@ -34,6 +36,7 @@
     border-top: 5px solid rgb(168,217,115);
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
+    cursor: pointer;
     position: relative;
     font-size: 20px;
     background-color: white;
@@ -48,6 +51,7 @@
     border-top-left-radius: 20px;
     position: relative;
     font-size: 20px;
+    cursor: pointer;
     background-color: white;
 }
 
