--- a/frontend/src/pages/Webinar/Webinar.css
+++ b/frontend/src/pages/Webinar/Webinar.css
@@ -81,4 +81,11 @@
     background: linear-gradient(90deg, rgba(30,144,255,1) 0%, rgba(0,212,255,1) 100%);
    }
    
-   
+   .wbform .signupItem{
+    width: 100%;
+    height: 55px;
+    border: 1px solid rgb(180, 180, 180);
+    padding: 10px;
+    border-radius: 10px;
+    background-color: rgb(233,235,252);
+   }
