--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -1,5 +1,6 @@
 .profileContainer{
     width: 100%;
+    height: 100vh;
 }
 
 .profileWrapper{
@@ -13,7 +14,7 @@
 .profileRightTop{
     width: 80%;
     position: relative;
-    height: 100vh;
+    height: 110vh;
     margin-top: 80px;
     background-color: aliceblue;
 }
@@ -64,11 +65,25 @@
     align-items: center;
     height: 100px;
     justify-content: center;
+    align-self: flex-end;
 }
-
 
 .bgImg{
     height: 70px;
+}
+
+.row{
+    margin-top: 3%;
+    display: flex;
+    width: 100%;
+    gap: 20px;
+    height: max-content;
+}
+
+.pflistItem{
+    background-color: white;
+    padding: 5px;
+    border-radius: 5px;
 }
 
 
