--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@200&family=Roboto&family=Titillium+Web:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dongle&family=Fredoka:wght@600&family=Poppins:wght@500&family=Signika+Negative:wght@500;600&display=swap');
+
 *{
     font-family: 'Poppins';
 }
@@ -61,12 +62,14 @@ a{
 
 .homeSection3{
     padding: 20px;
-    background-image: url('https://kidsheaven.wpengine.com/wp-content/uploads/2017/02/yellow_pattern.jpg');
+    background-image: url('https://bracketweb.com/kidearn-html/assets/images/shapes/program-bg-shape-3.png');
+
 }
 
 .homeSection4{
-    background-color: rgb(254,249,243);
+    background-image: url('https://kidsheaven.wpengine.com/wp-content/uploads/2017/02/yellow_pattern.jpg');
     padding-bottom: 10px;
+    background-color: rgb(254,249,243);
 }
 
 /* image css */
@@ -94,7 +97,8 @@ a{
 .homeimg3{
     border-radius: 50%;
     /* border-radius: 10px; */
-    width: 105%;
+    width: 90%;
+    height: 90%;
 }
 
 .homeTitle{
@@ -132,16 +136,22 @@ a{
     justify-content: center;
 }
 
+.homeSection4 .homeTitle{
+    color: #dc6013;
+}
+
 .homeText3{
     background-color: rgb(254,249,243);
     border-radius: 20px;
-    padding: 50px;
+    padding: 30px;
     flex: 7;
     display: flex;
     flex-direction: column;
     margin-right: 50px;
 }
-
+h2{
+    margin: 0 ;
+}
 
 /* cards css */
 .cdWrapper{
