--- a/frontend/src/pages/Eventpg/Event.css
+++ b/frontend/src/pages/Eventpg/Event.css
@@ -1,6 +1,8 @@
 .eventContainer {
     width: 100%;
     margin-top: 120px;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
   }
   
   .eventWrapper {
