--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -66,11 +66,29 @@ a{
     background-image: url('https://bracketweb.com/kidearn-html/assets/images/shapes/program-bg-shape-3.png');
 }
 
-.homeSection4{
+.home .homeSection4{
     background-image: url('https://kidsheaven.wpengine.com/wp-content/uploads/2017/02/yellow_pattern.jpg');
     padding-bottom: 10px;
     background-color: rgb(254,249,243);
+    padding:75px  40px;
 }
+
+.home .homeSection4 .cd4{
+    padding: 20px 28px;
+    transition: background-color 0.5s ease-out;
+}
+
+.home .homeSection4 .cd4:hover {
+    background-color: #dc6013;
+    color: white;
+}
+
+.home .homeSection4 .cd4:hover .cd3title{
+    background-color: #dc6013;
+    color: white;
+}
+
+
 
 /* image css */
 .home .imgDiv{
@@ -94,11 +112,11 @@ a{
     padding: 0;
 }
 
-.homeimg3{
+.home .homeimg3{
     border-radius: 50%;
     /* border-radius: 10px; */
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
 }
 
 .homeTitle{
@@ -143,6 +161,7 @@ a{
 
 .homeSection4 .homeTitle{
     color: #dc6013;
+    margin-bottom: 40px;
 }
 
 .homeText3{
@@ -154,10 +173,17 @@ a{
     flex-direction: column;
     margin-right: 50px;
 }
-.home .homeText3{
-    padding: 45px;
-    font-size: large    ; 
+.home .homeSection3 .homeText3{
+    padding: 40px;
+    font-size: large ;
+    border: solid 3px #dc6013;
+    transition: background-color 0.5s ease-in-out;
 }
+.home .homeSection3 .homeText3:hover{
+    background-color: #dc6013;
+    color: white;
+}
+
 h2{
     margin: 0 ;
 }
@@ -214,14 +240,6 @@ h2{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-.cd4:hover{
-    padding: 10px;
-    background-color: rgb(248,225,210);
-    border-radius: 20px;
-    margin-top: 0px;
-    width: 100%;
 }
 
 
@@ -454,6 +472,28 @@ h2{
             transform: scale3d(1.2, 1.2, 1);
   }
   
-  
-  
-  
+  .homeSection5{
+    /* background-color: #89b730; */
+  }
+
+  .home .homeSection5 .cdWrapper{
+    gap: 20px;
+
+    padding: 60px;
+    /* margin-left:180px ; */
+    /* margin-right:180px ; */
+  }
+  .home .homeSection5 .cdWrapper2{
+    gap: 60px;
+
+    /* margin-left:180px ; */
+    /* margin-right:180px ; */
+  }
+  .home .homeSection5 .cdWrapper2 .cd2{
+overflow: hidden;
+  }
+
+  .homeSection6 .cdWrapper2{
+    gap: 100px;
+    padding: 40px 20px;
+  }
