--- a/frontend/src/pages/Videospg/Videos.css
+++ b/frontend/src/pages/Videospg/Videos.css
@@ -209,3 +209,14 @@
   color: white;
   border-radius: 10px;
 }
+
+.popup-message {
+  background-color: white;
+  padding: 10px;
+  margin-top: 10px;
+  border: 1px solid #ccc;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+}
